<resources>
    <string name="app_name">Parentalize</string>
    <string name="trending">Trending</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="an_alien_probably_blocking_your_signal">An Alien probably blocking your signal</string>
    <string name="retry">Retry</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_goals">Goals</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_home">Home</string>
    <string name="title_childs">Childs</string>
    <string name="your_daily_goals">Your daily goals</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="_0_7">0/7</string>
    <string name="achieved">Achieved</string>
    <string name="continues">Continue</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ob_screen_one_title">Track your activity</string>
    <string name="ob_screen_one_description">Create profiles for\nyour children</string>

    <string name="ob_screen_two_title">Plan to meditate</string>
    <string name="ob_screen_two_description">Set daily goals for\nyour kids</string>

    <string name="ob_screen_three_title">Daily insights</string>
    <string name="ob_screen_three_description">Celebrate the\nprogress</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_with_google">Signup with google</string>
    <string name="facebook">Facebook</string>
    <string name="user">User</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="goals">Goals</string>

    <string name="add_child">Add Child</string>
    <string name="profile_management">Profile Management</string>
    <string name="faqs">FAQs</string>
    <string name="blog">Blog</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>